[project]
name = "matbti-map"
version = "0.1.0"
description = "맛BTI 맵 - LLM 기반 맞춤 식당 추천 서비스"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "playwright>=1.49.0",
    "httpx>=0.28.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "pgvector>=0.3.0",
    "geoalchemy2>=0.15.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=1.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
